# neo_calc

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  style.css
.github/workflows/: deploy.yml
src/: eval.rs  lib.rs  plot.rs
